--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /shared/fontawesome-free/nbproject/private/
 /public_html/shared/fontawesome-free/nbproject/private/
+/package-lock.json
+/node_modules
